[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game/Levels/Pseudocode/Cap1Theory.gd" type="Script" id=1]
[ext_resource path="res://Game/Pets/AnyPet.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Levels/TheoryTemplate.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]

resource_name = "anim1"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnyPet:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -304, 7.62939e-06 ), Vector2( 624, 384 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnyPet:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3875, 0.3875 ), Vector2( 0.44375, 0.44375 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnyPet:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[sub_resource type="Animation" id=2]

resource_name = "anim2"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnyPet:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.6, 0.6 ), Vector2( 1.525, 1.525 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnyPet:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 544, 384 ), Vector2( 432, 656 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnyPet:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[sub_resource type="Animation" id=3]

resource_name = "anim3"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnyPet:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 432, 656 ), Vector2( 544, 704 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnyPet:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -15.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnyPet:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.525, 1.525 ), Vector2( 1.525, 1.525 ) ]
}

[node name="Cap1Theory" type="Node" index="0"]
script = ExtResource( 1 )

[node name="AnyPet" parent="." index="0" instance=ExtResource( 2 )]
editor/display_folded = true
position = Vector2( -304, 7.62939e-06 )
scale = Vector2( 0.3875, 0.3875 )
_sections_unfolded = [ "Transform" ]

[node name="TheoryTemplate" parent="." index="1" instance=ExtResource( 3 )]

[node name="Bottom" parent="TheoryTemplate" index="2"]
editor/display_folded = true

[node name="Anim" type="AnimationPlayer" parent="." index="2"]
root_node = NodePath("..")
autoplay = "anim1"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/anim1 = SubResource( 1 )
anims/anim2 = SubResource( 2 )
anims/anim3 = SubResource( 3 )
blend_times = [  ]

[connection signal="changed_text" from="TheoryTemplate/RPGDialog" to="." method="_on_RPGDialog_changed_text"]

[editable path="AnyPet"]

[editable path="TheoryTemplate"]
